# world-change-tracker

./: .gitignore  config.toml  world-change-tracker.code-workspace
content/: _index.md  stats.md
data/generator/: Cargo.toml  README.md  config.json
data/generator/src/: frontmatter.rs  lib.rs  main.rs  output.rs
data/generator/src/app/: mod.rs
data/generator/src/compare/: mod.rs
data/generator/src/comparison/: change.rs  comparison.rs  data_point.rs  mod.rs  year.rs
data/generator/src/config/: column.rs  config.rs  data_type.rs  mod.rs  schema.rs  source.rs
data/generator/src/data/: atmosphere.rs  data_source.rs  data_type.rs  living_planet.rs  mod.rs  ozone.rs  point.rs  population.rs  red_list_index.rs  table.rs  temperature.rs  value.rs
data/generator/src/data/traits/: hashmap.rs  mod.rs  vec.rs
data/generator/src/output/: index.rs  mod.rs  output.rs  page.rs
data/generator/test/: config.json  float.csv  integer.csv
sass/css/: main.scss
sass/source/1_settings/: _breakpoints.scss  _colours.scss  _type.scss
sass/source/2_tools/: _colour.scss  _display.scss  _type.scss
sass/source/3_generic/: _box-sizing.scss  _variables.scss
sass/source/4_elements/: _forms.scss  _images.scss  _links.scss  _tables.scss  _typography.scss
sass/source/5_objects/: _a11y.scss  (+2 more)
templates/: index.html  master.html  page.html  section.html  year.html
templates/includes/: footer.html  nav.html  sources.html
templates/layout/: full-width.html
templates/macros/: change.html  graphics.html  macros.html
templates/shortcodes/: chart.html  year_form.html
(+18 files in other folders)
